@@ -67,6 +67,8 @@
 #Missing translation -> ERROR_TOOL_AGENT_XSLT_OR_FOP_RESULT_PARAMETER_REQUIRED = Missing required formal parameter. Parameter with Id "result" has to be defined
 #Missing translation -> ERROR_TOOL_AGENT_XSLT_OR_FOP_TRANSFORMER_PARAMETER_REQUIRED = Missing required formal parameter or extended attribute. Either parameter with Id "transformer_name", "transformer_path", "transformer_node" or "transformer_script" or extended attribute with name "Script" has to be defined
 
+#Missing translation -> ERROR_TOOL_AGENT_POWERSHELL_SCRIPT_PARAMETER_REQUIRED = Missing required formal parameter or extended attribute. Either parameter with Id "script_name", "script_path" or "script_variable" or extended attribute with name "Script" has to be defined
+
 #Missing translation -> ERROR_DYNAMICSCRIPT_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = Dynamic script variable self-references are not allowed
 #Missing translation -> ERROR_DYNAMICSCRIPT_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED = Dynamic script variable circular-references are not allowed
 #Missing translation -> ERROR_DYNAMICSCRIPT_VARIABLE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = Dynamic script variable implicit circular-references are not allowed
