@@ -68,6 +68,8 @@ ERROR_TOOL_AGENT_XPIL_XPIL_PARAMETER_REQUIRED = Nedostaje neophodni formalni par
 ERROR_TOOL_AGENT_XSLT_OR_FOP_RESULT_PARAMETER_REQUIRED = Nedostaje neophodni formalni parametar. Parametar sa Id-om "result" mora biti definisan
 ERROR_TOOL_AGENT_XSLT_OR_FOP_TRANSFORMER_PARAMETER_REQUIRED = Nedostaje neophodni formalni parametar ili pro\u0161ireni atribut. Parametar sa Id-om "transformer_name", "transformer_path", "transformer_node" ili "transformer_script" ili pro\u0161ireni atribut sa imenom "Script" mora biti definisan
 
+ERROR_TOOL_AGENT_POWERSHELL_SCRIPT_PARAMETER_REQUIRED = Nedostaje neophodni formalni parametar ili pro\u0161ireni atribut. Parametar sa Id-om "script_name", "script_path" or "script_variable" ili pro\u0161ireni atribut sa imenom "Script" mora biti definisan
+
 ERROR_DYNAMICSCRIPT_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = Nije dozvoljeno samo-referenciranje dinami\u010Dke skript varijable
 ERROR_DYNAMICSCRIPT_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED = Nije dozvoljeno uzajamno-referenciranje dinami\u010Dkih skript varijabli
 ERROR_DYNAMICSCRIPT_VARIABLE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = Nije dozvoljeno implicitno uzajamno-referenciranje dinami\u010Dkih skript varijabli
