@@ -169,6 +169,11 @@ JaWETypes.ApplicationType.LangDepName.Mail = org.enhydra.shark.toolagent.MailToo
 JaWETypes.ApplicationType.Icon.Mail = org/enhydra/jawe/shark/images/mailta.gif
 JaWETypes.ApplicationType.XPDLTemplate.Mail = sharkappmailta.xml
 
+JaWETypes.ApplicationType.Id.PowerShell = org.enhydra.shark.toolagent.PowerShellToolAgent
+JaWETypes.ApplicationType.LangDepName.PowerShell = org.enhydra.shark.toolagent.PowerShellToolAgentKey
+JaWETypes.ApplicationType.Icon.PowerShell = org/enhydra/jawe/shark/images/powershellta.gif
+JaWETypes.ApplicationType.XPDLTemplate.PowerShell = sharkapppowershellta.xml
+
 JaWETypes.ApplicationType.Id.Quartz = org.enhydra.shark.toolagent.QuartzToolAgent
 JaWETypes.ApplicationType.LangDepName.Quartz = org.enhydra.shark.toolagent.QuartzToolAgentKey
 JaWETypes.ApplicationType.Icon.Quartz = org/enhydra/jawe/shark/images/quartzta.gif
@@ -219,7 +224,7 @@ JaWETypes.ApplicationType.LangDepName.XSLT = org.enhydra.shark.toolagent.XSLTToo
 JaWETypes.ApplicationType.Icon.XSLT = org/enhydra/jawe/shark/images/xsltta.gif
 JaWETypes.ApplicationType.XPDLTemplate.XSLT = sharkappxsltta.xml
 
-JaWETypes.ApplicationType.Order=default,BeanShell,CheckDocumentFormats,ExecuteSql,FOP,JavaClass,JavaScript,LDAP,Mail,Quartz,RuntimeApplication,Scheduler,SOAP,TSC,TXW,UserGroup,XPath,XPIL,XSLT
+JaWETypes.ApplicationType.Order=default,BeanShell,CheckDocumentFormats,ExecuteSql,FOP,JavaClass,JavaScript,LDAP,Mail,PowerShell,Quartz,RuntimeApplication,Scheduler,SOAP,TSC,TXW,UserGroup,XPath,XPIL,XSLT
 
 #################### Artifact
 
