@@ -26,6 +26,7 @@ org.enhydra.shark.toolagent.JavaClassToolAgentKey=Java Class
 org.enhydra.shark.toolagent.JavaScriptToolAgentKey=Java Script
 org.enhydra.shark.toolagent.LDAPToolAgentKey=LDAP
 org.enhydra.shark.toolagent.MailToolAgentKey=Mail
+org.enhydra.shark.toolagent.PowerShellToolAgentKey=PowerShell
 org.enhydra.shark.toolagent.QuartzToolAgentKey=Quartz
 org.enhydra.shark.toolagent.RuntimeApplicationToolAgentKey=Runtime Application
 org.enhydra.shark.toolagent.SchedulerToolAgentKey=Scheduler
