@@ -1,0 +1,37 @@
+<!--
+    Together Workflow Editor
+    Copyright (C) 2011 Together Teamsolutions Co., Ltd.
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or 
+    (at your option) any later version.
+ 
+    This program is distributed in the hope that it will be useful, 
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+    GNU General Public License for more details.
+ 
+    You should have received a copy of the GNU General Public License
+    along with this program. If not, see http://www.gnu.org/licenses
+-->
+<Application Id="powershell" Name="PowerShell">
+   <FormalParameters>
+      <FormalParameter Id="result" Name="Result" IsArray="false" Mode="OUT">
+         <DataType>
+            <BasicType Type="STRING"/>
+         </DataType>
+         <Description>String representing output of PowerShell execution.</Description>
+      </FormalParameter>
+      <FormalParameter Id="error" Name="Error" IsArray="false" Mode="OUT">
+         <DataType>
+            <BasicType Type="STRING"/>
+         </DataType>
+         <Description>String representing error output of PowerShell execution.</Description>
+      </FormalParameter>
+   </FormalParameters>   
+   <ExtendedAttributes>
+      <ExtendedAttribute Name="ToolAgentClass" Value="org.enhydra.shark.toolagent.PowerShellToolAgent"/>
+      <ExtendedAttribute Name="Script" Value=""/>
+    </ExtendedAttributes>
+</Application>
