@@ -93,6 +93,8 @@ public final class SharkValidationErrorIds {
 
    public static final String ERROR_TOOL_AGENT_XSLT_OR_FOP_TRANSFORMER_PARAMETER_REQUIRED = "ERROR_TOOL_AGENT_XSLT_OR_FOP_TRANSFORMER_PARAMETER_REQUIRED";
 
+   public static final String ERROR_TOOL_AGENT_POWERSHELL_SCRIPT_PARAMETER_REQUIRED = "ERROR_TOOL_AGENT_POWERSHELL_SCRIPT_PARAMETER_REQUIRED";
+
    public static final String ERROR_DYNAMICSCRIPT_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = "ERROR_DYNAMICSCRIPT_VARIABLE_SELF_REFERENCES_NOT_ALLOWED";
 
    public static final String ERROR_DYNAMICSCRIPT_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED = "ERROR_DYNAMICSCRIPT_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED";
